// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageDelegates has the expected html structure 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Delegates
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                  <router-link
                    to="/staking/bond"
                  >
                    <i
                      class="material-icons"
                    >
                      check_circle
                    </i>
                    <div
                      class="label"
                    >
                      Bond Atoms
                    </div>
                  </router-link>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <!---->
    <div
      class="panel-sort"
    >
      <div
        class="panel-sort-container"
      >
        <div
          class="sort-by active asc"
        >
          <div
            class="label"
          >
            Public Key
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Country
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Voting Power
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Delegated Power
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Commission
          </div>
        </div>
      </div>
    </div>
    <div
      class="li-delegate"
    >
      <div
        class="li-delegate-container"
      >
        <div
          class="values"
        >
          <div
            class="value id"
          >
            <span>
              <i
                class="fa fa-square-o"
              />
              <router-link
                to="[object Object]"
              >
                pubkeyX
              </router-link>
            </span>
          </div>
          <div
            class="value"
          >
            USA
          </div>
          <div
            class="value voting_power num bar"
          >
            <span>
              10,000
            </span>
            <div
              class="bar"
              style="width: 33%;"
            />
          </div>
          <div
            class="value delegated num bar delegated"
          >
            <span>
              5,000
            </span>
            <div
              class="bar"
              style="width: 50%;"
            />
          </div>
          <div
            class="value"
          >
            n/a
          </div>
        </div>
        <menu>
          <button
            class="ni-btn"
          >
            <span
              class="ni-btn-container ni-btn-size-sm ni-btn-theme-cosmos"
            >
              <i
                aria-hidden="true"
                class="ni-btn-icon material-icons"
              >
                check
              </i>
              <span
                class="ni-btn-value"
              >
                Add
              </span>
            </span>
          </button>
        </menu>
      </div>
    </div>
    <div
      class="li-delegate"
    >
      <div
        class="li-delegate-container"
      >
        <div
          class="values"
        >
          <div
            class="value id"
          >
            <span>
              <i
                class="fa fa-square-o"
              />
              <router-link
                to="[object Object]"
              >
                pubkeyY
              </router-link>
            </span>
          </div>
          <div
            class="value"
          >
            Canada
          </div>
          <div
            class="value voting_power num bar"
          >
            <span>
              30,000
            </span>
            <div
              class="bar"
              style="width: 100%;"
            />
          </div>
          <div
            class="value delegated num bar delegated"
          >
            <span>
              10,000
            </span>
            <div
              class="bar"
              style="width: 100%;"
            />
          </div>
          <div
            class="value"
          >
            n/a
          </div>
        </div>
        <menu>
          <button
            class="ni-btn"
          >
            <span
              class="ni-btn-container ni-btn-size-sm ni-btn-theme-cosmos"
            >
              <i
                aria-hidden="true"
                class="ni-btn-icon material-icons"
              >
                check
              </i>
              <span
                class="ni-btn-value"
              >
                Add
              </span>
            </span>
          </button>
        </menu>
      </div>
    </div>
  </main>
  <footer
    class="ni-page-footer"
  >
    <div
      class="container"
    />
  </footer>
</div>
`;

exports[`PageDelegates should filter the delegates 1`] = `
<div
  class="ni-page"
>
  <header
    class="ni-page-header"
  >
    <div
      class="ni-page-header-container"
    >
      <div
        class="ni-page-header-text"
      >
        <div
          class="ni-page-header-title"
        >
          <div>
            Delegates
          </div>
        </div>
        <div
          class="ni-page-header-subtitle"
        >
          <div>
            
          </div>
        </div>
      </div>
      <menu
        class="ni-page-header-menu"
      >
        <div>
          <div>
            <div
              class="ni-tool-bar"
            >
              <div
                class="ni-tool-bar-container"
              >
                <div
                  class="main"
                >
                  <a>
                    <i
                      class="material-icons"
                    >
                      search
                    </i>
                    <div
                      class="label"
                    >
                      Search
                    </div>
                  </a>
                  <a>
                    <i
                      class="material-icons"
                    >
                      refresh
                    </i>
                    <div
                      class="label"
                    >
                      Refresh
                    </div>
                  </a>
                  <router-link
                    to="/staking/bond"
                  >
                    <i
                      class="material-icons"
                    >
                      check_circle
                    </i>
                    <div
                      class="label"
                    >
                      Bond Atoms
                    </div>
                  </router-link>
                </div>
                <a
                  class="help"
                >
                  <i
                    class="material-icons"
                  >
                    help_outline
                  </i>
                </a>
              </div>
            </div>
          </div>
        </div>
      </menu>
    </div>
  </header>
  <main
    class="ni-page-main"
  >
    <div
      class="ni-modal-search"
    >
      <div
        class="ni-modal-search-container"
      >
        <input
          class="mousetrap ni-field"
          placeholder="Search..."
          type="text"
        />
        <button
          class="ni-btn"
        >
          <span
            class="ni-btn-container"
          >
            <i
              aria-hidden="true"
              class="ni-btn-icon material-icons"
            >
              close
            </i>
            <!---->
          </span>
        </button>
      </div>
    </div>
    <div
      class="panel-sort"
    >
      <div
        class="panel-sort-container"
      >
        <div
          class="sort-by active asc"
        >
          <div
            class="label"
          >
            Public Key
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Country
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Voting Power
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Delegated Power
          </div>
        </div>
        <div
          class="sort-by"
        >
          <div
            class="label"
          >
            Commission
          </div>
        </div>
      </div>
    </div>
    <div
      class="li-delegate"
    >
      <div
        class="li-delegate-container"
      >
        <div
          class="values"
        >
          <div
            class="value id"
          >
            <span>
              <i
                class="fa fa-square-o"
              />
              <router-link
                to="[object Object]"
              >
                pubkeyX
              </router-link>
            </span>
          </div>
          <div
            class="value"
          >
            USA
          </div>
          <div
            class="value voting_power num bar"
          >
            <span>
              10,000
            </span>
            <div
              class="bar"
              style="width: 33%;"
            />
          </div>
          <div
            class="value delegated num bar delegated"
          >
            <span>
              5,000
            </span>
            <div
              class="bar"
              style="width: 50%;"
            />
          </div>
          <div
            class="value"
          >
            n/a
          </div>
        </div>
        <menu>
          <button
            class="ni-btn"
          >
            <span
              class="ni-btn-container ni-btn-size-sm ni-btn-theme-cosmos"
            >
              <i
                aria-hidden="true"
                class="ni-btn-icon material-icons"
              >
                check
              </i>
              <span
                class="ni-btn-value"
              >
                Add
              </span>
            </span>
          </button>
        </menu>
      </div>
    </div>
    <div
      class="li-delegate"
    >
      <div
        class="li-delegate-container"
      >
        <div
          class="values"
        >
          <div
            class="value id"
          >
            <span>
              <i
                class="fa fa-square-o"
              />
              <router-link
                to="[object Object]"
              >
                pubkeyY
              </router-link>
            </span>
          </div>
          <div
            class="value"
          >
            Canada
          </div>
          <div
            class="value voting_power num bar"
          >
            <span>
              30,000
            </span>
            <div
              class="bar"
              style="width: 100%;"
            />
          </div>
          <div
            class="value delegated num bar delegated"
          >
            <span>
              10,000
            </span>
            <div
              class="bar"
              style="width: 100%;"
            />
          </div>
          <div
            class="value"
          >
            n/a
          </div>
        </div>
        <menu>
          <button
            class="ni-btn"
          >
            <span
              class="ni-btn-container ni-btn-size-sm ni-btn-theme-cosmos"
            >
              <i
                aria-hidden="true"
                class="ni-btn-icon material-icons"
              >
                check
              </i>
              <span
                class="ni-btn-value"
              >
                Add
              </span>
            </span>
          </button>
        </menu>
      </div>
    </div>
  </main>
  <footer
    class="ni-page-footer"
  >
    <div
      class="container"
    />
  </footer>
</div>
`;
